[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sounds/ui/buttons/choose04.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/ui/buttons/choose03.wav" type="AudioStream" id=3]
[ext_resource path="res://game/ui/MenuButton.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="MenuButton" type="Button"]
margin_right = 338.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "Button Text"
icon_align = 1
script = ExtResource( 4 )

[node name="SelectionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "Buttons"

[node name="MoveSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Buttons"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
